[build-system]
requires=["setuptools >= 77.0.3"]
build-backend="setuptools.build_meta"

[project]
name = "pypet_littledevel"
version = "0.1.0"
authors = [
  { name="Kostas Makedos", email="kostas.makedos@gmail.com" },
]
description = "A demo pypet"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/littledevel/pypet"
Issues = "https://github.com/littledevel/pypet/issyes"
